<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/plus_icon"
        android:title="@string/fragment_create" />
    <item
        android:id="@+id/navigation_edit"
        android:icon="@drawable/pencil_icon"
        android:title="@string/fragment_edit" />
    <item
        android:id="@+id/navigation_delete"
        android:icon="@drawable/minus_icon"
        android:title="@string/fragment_delete" />
    <item
        android:id="@+id/navigation_exit"
        android:icon="@drawable/exit_icon"
        android:title="@string/fragment_exit" />
</menu>